==> liu-delong/lu_xing_xiang_one_os/drivers/hal/hc/hal_drivers/drv_gpio.c <==
#include <os_irq.h>
#include "drv_gpio.h"
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static void hc32_pin_write(struct os_device *dev, os_base_t pin, os_base_t value)
{
    struct pin_index *index;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return;
    }

    Gpio_WriteOutputIO(index->port, (en_gpio_pin_t)index->pin, (boolean_t)value);
}

static int hc32_pin_read(struct os_device *dev, os_base_t pin)
{
    int                     value;
    const struct pin_index *index;

    value = PIN_LOW;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return value;
    }

	value = Gpio_GetInputIO(index->port, index->pin);

    return value;
}

static void hc32_pin_mode(struct os_device *dev, os_base_t pin, os_base_t mode)
{
    const struct pin_index *index;
	stc_gpio_cfg_t GPIO_Cfg;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return;
    }

    /* Configure GPIO_InitStructure */
	GPIO_Cfg.enCtrlMode = GpioAHB;
	GPIO_Cfg.enDrv = GpioDrvH;

	switch(mode){
		case PIN_MODE_OUTPUT:
			/* output setting */
			GPIO_Cfg.enDir = GpioDirOut;
			GPIO_Cfg.enPd = GpioPdDisable;
			GPIO_Cfg.enPu = GpioPuDisable;
			break;
		case PIN_MODE_INPUT:
			/* input setting: not pull. */
			GPIO_Cfg.enDir = GpioDirIn;
			GPIO_Cfg.enPd = GpioPdDisable;
			GPIO_Cfg.enPu = GpioPuDisable;
			break;
		
		case PIN_MODE_INPUT_PULLUP:
			/* input setting: pull up. */	
			GPIO_Cfg.enDir = GpioDirIn;
			GPIO_Cfg.enPd = GpioPdDisable;
			GPIO_Cfg.enPu = GpioPuEnable;
				
			break;
		case PIN_MODE_INPUT_PULLDOWN:
			
			/* input setting: pull down. */ 
			GPIO_Cfg.enDir = GpioDirIn;
			GPIO_Cfg.enPd = GpioPdEnable;
			GPIO_Cfg.enPu = GpioPuDisable;	  
			break;
		case PIN_MODE_OUTPUT_OD:
			/* output setting: od. */
			GPIO_Cfg.enDir = GpioDirOut;
			GPIO_Cfg.enPd = GpioPdDisable;
			GPIO_Cfg.enPu = GpioPuDisable;
			GPIO_Cfg.enOD = GpioOdEnable;
				
			break;

		default:
			
			break;
	}
#if 0
    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
		GPIO_Cfg.enDir = GpioDirOut;
		GPIO_Cfg.enPd = GpioPdDisable;
		GPIO_Cfg.enPu = GpioPuDisable;
		
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
		GPIO_Cfg.enDir = GpioDirIn;
		GPIO_Cfg.enPd = GpioPdDisable;
		GPIO_Cfg.enPu = GpioPuDisable;
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */	
		GPIO_Cfg.enDir = GpioDirIn;
		GPIO_Cfg.enPd = GpioPdDisable;
		GPIO_Cfg.enPu = GpioPuEnable;
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */	
		GPIO_Cfg.enDir = GpioDirIn;
		GPIO_Cfg.enPd = GpioPdEnable;
		GPIO_Cfg.enPu = GpioPuDisable;    
	}
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
		GPIO_Cfg.enDir = GpioDirOut;
		GPIO_Cfg.enPd = GpioPdDisable;
		GPIO_Cfg.enPu = GpioPuDisable;
		GPIO_Cfg.enOD = GpioOdEnable;
    }
#endif
	/* remeber the pull state. */
    //pin_pulls[index->index].pd = GPIO_Cfg.enPd;
	//pin_pulls[index->index].pu = GPIO_Cfg.enPu;
	
	Gpio_Init(index->port, index->pin, &GPIO_Cfg);
}

static os_err_t hc32_pin_irq_enable(struct os_device *device, os_base_t pin, os_uint32_t enabled)
{
    struct pin_index *index;
    os_base_t level;
	os_uint32_t port_base = pin/16;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return OS_ENOSYS;
    }

    if (enabled == PIN_IRQ_ENABLE)
    {

        level = os_hw_interrupt_disable();

		if(index->irq_ref > 0){
			os_hw_interrupt_enable(level);
			return OS_EOK;
		}

        switch (index->mode)
        {
        case PIN_IRQ_MODE_RISING:
			Gpio_EnableIrq(index->port,index->pin, GpioIrqRising);
            break;
        case PIN_IRQ_MODE_FALLING:
            Gpio_EnableIrq(index->port,index->pin, GpioIrqFalling);
            break;
        case PIN_IRQ_MODE_HIGH_LEVEL:			
			Gpio_EnableIrq(index->port,index->pin, GpioIrqHigh);
			break;
        case PIN_IRQ_MODE_LOW_LEVEL:			
			Gpio_EnableIrq(index->port,index->pin, GpioIrqLow);
			break;
		case PIN_IRQ_MODE_RISING_FALLING:
		default:
            os_hw_interrupt_enable(level);
            return OS_ENOSYS;
        }

		index->irq_ref++;

		if(pState[port_base]->ref == 0)
			EnableNvic(pState[port_base]->irq, IrqLevel3, TRUE);

		pState[port_base]->ref++;
		
        os_hw_interrupt_enable(level);
    }
    else if (enabled == PIN_IRQ_DISABLE)
    {
        level = os_hw_interrupt_disable();

		if(index->irq_ref ==0){
			os_hw_interrupt_enable(level);
			return OS_EOK;
		}

        switch (index->mode)
        {
        case PIN_IRQ_MODE_RISING:
			Gpio_DisableIrq(index->port,index->pin, GpioIrqRising);
            break;
        case PIN_IRQ_MODE_FALLING:
            Gpio_DisableIrq(index->port,index->pin, GpioIrqFalling);
            break;
        case PIN_IRQ_MODE_HIGH_LEVEL:			
			Gpio_DisableIrq(index->port,index->pin, GpioIrqHigh);
			break;
        case PIN_IRQ_MODE_LOW_LEVEL:			
			Gpio_DisableIrq(index->port,index->pin, GpioIrqLow);
			break;
		case PIN_IRQ_MODE_RISING_FALLING:
		default:
            os_hw_interrupt_enable(level);
            return OS_ENOSYS;
        }

		index->irq_ref--;

		pState[port_base]->ref--;
		if(pState[port_base]->ref == 0)
			EnableNvic(pState[port_base]->irq, IrqLevel3, FALSE);

        os_hw_interrupt_enable(level);
    }
    else
    {
        return OS_ENOSYS;
    }
    return OS_EOK;
}

int os_hw_pin_init(void)
{

	Sysctrl_SetPeripheralGate(SysctrlPeripheralGpio, TRUE); 

    return os_device_pin_register(0, &_hc32_pin_ops, OS_NULL);
}
